# WaveSimulation

./: CMakeLists.txt  README.md  test.c
include/: waveSimulation.h
src/: waveSimulation.c
